fix(web): set code-text as overflow: auto

--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -72,6 +72,7 @@ code,
   font-weight: 400;
   font-size: 16px;
   line-height: inherit;
+  overflow: auto;
 
   background: var(--e-grey-05);
   border-radius: 4px;
